--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <style>
+      h2 {
+        color:aqua
+      }
+    </style>
   </head>
   <body>
     <h2>
