--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -14,6 +14,8 @@
     <p>yo yo yo</p>
     <script>
       let a = 1;
+      let myStr = 'This is the first sentence.';
+      myStr += ' This is the second sentence.'
     </script>
   </body>
 </html>
