--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -15,7 +15,9 @@
     <script>
       let a = 1;
       let myStr = 'This is the first sentence.';
-      myStr += ' This is the second sentence.'
+      myStr += ' This is the second sentence.';
+      const myName = "ert";
+      const myStrs = "" + myName + 'asd';
     </script>
   </body>
 </html>
