--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      h2 {
-        color:aqua
-      }
-    </style>
-  </head>
-  <body>
-    <h2>
-      Hello
-    </h2>
-    <p>yo yo yo</p>
-    <script>
-      let a = 1;
-      let myStr = 'This is the first sentence.';
-      myStr += ' This is the second sentence.';
-      const myName = "ert";
-      const myStrs = "" + myName + 'asd';
-    </script>
-  </body>
+
+<head>
+  <style>
+    h2 {
+      color: aqua
+    }
+  </style>
+</head>
+
+<body>
+  <h2>
+    Hello
+  </h2>
+  <p>yo yo yo</p>
+  <script>
+    let a = 1;
+
+    const someAdjective = "hello ";
+    let myStr = "Learning to code is ";
+    myStr += someAdjective;
+  </script>
+</body>
+
 </html>
