--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -16,7 +16,12 @@
   <p>yo yo yo</p>
   <script>
     let a = 1;
+    // Setup
+    let lastNameLength = 0;
+    const lastName = "Lovelace";
 
+    // Only change code below this line
+    lastNameLength = lastName.length;
     const someAdjective = "hello ";
     let myStr = "Learning to code is ";
     myStr += someAdjective;
