--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -18,11 +18,15 @@
     let a = 1;
     // Setup
     let lastNameLength = 0;
-    const lastName = "Lovelace";
+
 
     // Only change code below this line
-    lastNameLength = lastName.length;
-    const someAdjective = "hello ";
+// Setup
+let firstLetterOfLastName = "";
+const lastName = "Lovelace";
+
+// Only change code below this line
+firstLetterOfLastName = lastName[0];
     let myStr = "Learning to code is ";
     myStr += someAdjective;
   </script>
