--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -15,20 +15,13 @@
   </h2>
   <p>yo yo yo</p>
   <script>
-    let a = 1;
-    // Setup
-    let lastNameLength = 0;
-
-
-    // Only change code below this line
 // Setup
-let firstLetterOfLastName = "";
-const lastName = "Lovelace";
+let myStr = "Jello World";
 
 // Only change code below this line
-firstLetterOfLastName = lastName[0];
-    let myStr = "Learning to code is ";
-    myStr += someAdjective;
+//myStr[0] = "H"; // Change this line
+myStr = 'Hello World';
+// Only change code above this line
   </script>
 </body>
 
