--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -16,12 +16,10 @@
   <p>yo yo yo</p>
   <script>
 // Setup
-let myStr = "Jello World";
+const lastName = "Lovelace";
 
 // Only change code below this line
-//myStr[0] = "H"; // Change this line
-myStr = 'Hello World';
-// Only change code above this line
+const thirdLetterOfLastName = lastName[2]; // Change this line
   </script>
 </body>
 
