--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -15,11 +15,15 @@
   </h2>
   <p>yo yo yo</p>
   <script>
-// Setup
-const lastName = "Lovelace";
-
-// Only change code below this line
-const thirdLetterOfLastName = lastName[2]; // Change this line
+function orderMyLogic(val) {
+  if (val < 5) {
+    return "Less than 5";
+  } else if (val < 10) {
+    return "Less than 10";
+  } else {
+    return "Greater than or equal to 10";
+  }
+}
   </script>
 </body>
 
