--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -15,33 +15,39 @@
   </h2>
   <p>yo yo yo</p>
   <script>
-function orderMyLogic(val) {
-  if (val < 5) {
-    return "Less than 5";
-  } else if (val < 10) {
-    return "Less than 10";
-  } else {
-    return "Greater than or equal to 10";
-  }
-}
 
-function testSize(num) {
+const names = ["Hole-in-one!", "Eagle", "Birdie", "Par", "Bogey", "Double Bogey", "Go Home!"];
+
+function golfScore(par, strokes) {
   // Only change code below this line
-if(num < 5) {
-  return 'Tiny'
-} else if (num < 10) {
-  return 'Small'
-} else if (num < 15) {
-  return 'Medium'
-} else if (num < 20) {
-  return 'Large'
-} else {
-  return 'Huge'
-}
+  if(par === 4 && strokes === 1) {
+    return names[0]
+  } else if (par === 4 && strokes === 2) {
+    return names[1]
+  } else if (par === 5 && strokes === 2) {
+    return names[1]
+  } else if (par === 4 && strokes === 3) {
+    return names[2]
+  } else if (par === 4 && strokes === 4) {
+    return names[3]
+  } else if (par === 1 && strokes === 1) {
+    return names[0]
+  } else if (par === 5 && strokes === 5) {
+    return names[3]
+  } else if (par === 4 && strokes === 5) {
+    return names[4]
+  } else if (par === 4 && strokes === 6) {
+    return names[5]
+  } else if (par === 4 && strokes === 7) {
+    return names[6]
+  } else if (par === 5 && strokes === 9) {
+    return names[6]
+  }
 
   return "Change Me";
   // Only change code above this line
 }
+
   </script>
 </body>
 
