--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -45,7 +45,31 @@ function golfScore(par, strokes) {
   }
 
   return "Change Me";
+
   // Only change code above this line
+}
+
+function caseInSwitch(val) {
+  let answer = "";
+  // Only change code below this line
+  switch (val) {
+    case 1:
+      answer ='alpha';
+      break;
+    case 2:
+      answer = 'beta';
+      break;
+    case 3:
+      answer = 'gamma';
+      break;
+    case 4:
+      answer ='delta';
+      break;
+  }
+
+
+  // Only change code above this line
+  return answer;
 }
 
   </script>
