--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -92,6 +92,15 @@ function switchOfStuff(val) {
   // Only change code above this line
   return answer;
 }
+const myDog = {
+  // Only change code below this line
+  name: 'gaf',
+  legs: 4,
+  tails: 2,
+  friends: [3]
+
+  // Only change code above this line
+};
   </script>
 </body>
 
