--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -102,11 +102,16 @@ const myDog = {
   // Only change code above this line
 };
 // Setup
+// Setup
 const testObj = {
-  hat: "ballcap",
-  shirt: "jersey",
-  "shoes": "cleats"
+  "an entree": "hamburger",
+  "my side": "veggies",
+  "the drink": "water"
 };
+
+// Only change code below this line
+const entreeValue = testObj["an entree"];   // Change this line
+const drinkValue = testObj["the drink"];    // Change this line
 
 // Only change code below this line
 const hatValue = testObj.hat;      // Change this line
