--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -109,7 +109,16 @@ const testObj = {
   16: "Montana",
   19: "Unitas"
 };
+// Setup
+const myDogs = {
+  "name": "Coder",
+  "legs": 4,
+  "tails": 1,
+  "friends": ["freeCodeCamp Campers"]
+};
 
+// Only change code below this line
+myDog.name = "Happy Coder";
 // Only change code below this line
 const playerNumber = 16;  // Change this line
 const player = testObj[playerNumber];   // Change this line
