--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -164,6 +164,13 @@ function updateRecords(records, id, prop, value) {
   }
   return records;
 }
+// Setup
+const myArray = [];
+let i = 5;
+while (i >= 0) {
+  myArray.push(i);
+  i--
+}
 
   </script>
 </body>
