--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -165,11 +165,10 @@ function updateRecords(records, id, prop, value) {
   return records;
 }
 // Setup
+
 const myArray = [];
-let i = 5;
-while (i >= 0) {
-  myArray.push(i);
-  i--
+for (let i = 1; i <= 5; i++) {
+  myArray.push(i)
 }
 
   </script>
