--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -171,6 +171,10 @@ for (let i = 1; i <= 5; i++) {
   myArray.push(i)
 }
 
+for (i=1; i<=10; i+=2) {
+  myArray.push(i)
+}
+
   </script>
 </body>
 
