--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -174,6 +174,9 @@ for (let i = 1; i <= 5; i++) {
 for (i=1; i<=10; i+=2) {
   myArray.push(i)
 }
+for (let i=9; i>0; i-=2) {
+  myArray.push(i)
+}
 
   </script>
 </body>
