--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -177,7 +177,48 @@ for (i=1; i<=10; i+=2) {
 for (let i=9; i>0; i-=2) {
   myArray.push(i)
 }
+// Setup
+const contacts = [
+  {
+    firstName: "Akira",
+    lastName: "Laine",
+    number: "0543236543",
+    likes: ["Pizza", "Coding", "Brownie Points"],
+  },
+  {
+    firstName: "Harry",
+    lastName: "Potter",
+    number: "0994372684",
+    likes: ["Hogwarts", "Magic", "Hagrid"],
+  },
+  {
+    firstName: "Sherlock",
+    lastName: "Holmes",
+    number: "0487345643",
+    likes: ["Intriguing Cases", "Violin"],
+  },
+  {
+    firstName: "Kristian",
+    lastName: "Vos",
+    number: "unknown",
+    likes: ["JavaScript", "Gaming", "Foxes"],
+  },
+];
 
+function lookUpProfile(name, prop) {
+  // Only change code below this line
+  for (let i = 0; i<contacts.length; i++) {
+    if (contacts[i].firstName === name && contacts[i][prop]) {
+      return contacts[i][prop];
+    } else if (contacts[i].firstName === name && !contacts[i]   [prop]) {
+      return 'No such property'
+    } 
+  }
+  return 'No such contact';
+  // Only change code above this line
+}
+
+lookUpProfile("Akira", "likes");
   </script>
 </body>
 
