--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -219,6 +219,15 @@ function lookUpProfile(name, prop) {
 }
 
 lookUpProfile("Akira", "likes");
+
+function randomFraction() {
+
+// Only change code below this line
+
+return Math.random();
+
+// Only change code above this line
+}
   </script>
 </body>
 
