--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -228,6 +228,12 @@ return Math.random();
 
 // Only change code above this line
 }
+function randomWholeNum() {
+
+// Only change code below this line
+
+return Math.floor(Math.random() * 10);
+}
   </script>
 </body>
 
