Convert a String to a Number

--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -279,7 +279,11 @@ function getSum( a,b ) {
   }
  
 }
-console.log(getSum(2, 0))
+const stringToNumber = function(str){
+  
+  // put your code here
+  return  +str;
+}
 
   </script>
 </body>
