Find the smallest integer in the array

--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -284,6 +284,9 @@ const stringToNumber = function(str){
   // put your code here
   return  +str;
 }
+let arr = [1,2,3,4]
+console.log(Math.min.apply(null, arr))
+
 
   </script>
 </body>
