--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -293,7 +293,10 @@ function isPythagoreanTriple(integers) {
   return false
   // Good luck friends!
 }
-console.log(isPythagoreanTriple([3, 5, 9]))
+function disemvowel(str) {
+  return str.replace(/[aeiou]/gi, '');
+}
+console.log(disemvowel('Thisy website is for losers LOL!'))
 
   </script>
 </body>
