--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -336,7 +336,13 @@ function century(year) {
     return +result
   } return result = +result + 1;
 }
-console.log(century(190))
+function highAndLow(numbers){
+  let arr = numbers.split(' ');
+  let result = `${Math.max(...arr)} ${Math.min(...arr)}`
+  return result;
+  // ...
+}
+console.log(highAndLow('1 2 3'))
 
   </script>
 </body>
