Remove First and Last Character

--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -348,7 +348,11 @@ function areYouPlayingBanjo(name) {
   }
   return `${name} does not play banjo`
 }
-console.log(areYouPlayingBanjo('Ringo'))
+function removeChar(str){
+ //You got this!
+  return str.substring(1, str.length - 1)
+};
+console.log(removeChar('Ringo'))
 
   </script>
 </body>
