--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -350,10 +350,19 @@ function areYouPlayingBanjo(name) {
 }
 function removeChar(str){
  //You got this!
-  return str.substring(1, str.length - 1)
+  return str.slice(1,  - 1)
 };
-console.log(removeChar('Ringo'))
 
+
+function countBy(x, n) {
+  let z = [];
+  for(let i = 0; i < n; i++) {
+    z.push(i + x)
+  }
+   z = z[0] === 1 ? z : z.map((e,i) => e = e === x ? x : x * (i+1) )
+  return z;
+}
+console.log(countBy(1, 5))
   </script>
 </body>
 
