--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -394,7 +394,27 @@ function past(h, m, s){
   
   return  time - now
 }
-console.log(past(0,1,1))
+function addingShifted (arrayOfArrays, shift) {
+  let newArr = arrayOfArrays[0]
+  
+  for ( let i = 0; i < shift * (arrayOfArrays.length-1); i++) {
+    newArr.push(0)
+  }
+  console.log( newArr)
+  for (let i = 1; i < arrayOfArrays.length; i++) {
+    for ( let j = 0; j < arrayOfArrays[i].length; j++) {
+      newArr[shift * i + j] += arrayOfArrays[i][j]
+      console.log(arrayOfArrays[i][j])
+    }
+  }
+
+    return newArr
+  }
+  
+
+//   return newArr
+// }
+console.log(addingShifted([[1, 2, 3, 4, 5, 6],[7, 7, 7, 7, 7, 7]], 3))
   </script>
 </body>
 
