--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -410,11 +410,23 @@ function addingShifted (arrayOfArrays, shift) {
 
     return newArr
   }
+
+  let fruits = ['banana', 'apple'];
+  fruits.unshift('passion')
+  let arr = Array(200)
+
+  function betterThanAverage(classPoints, yourPoints) {
+    let resultPoints = classPoints.reduce((a,b) => a + b, 0);
+    let middlePoints = resultPoints / classPoints.length
+    return yourPoints >= middlePoints ? true : false
+  // Your code here
+}
+
+  
+  console.log(betterThanAverage([2, 3], 2))
   
 
-//   return newArr
-// }
-console.log(addingShifted([[1, 2, 3, 4, 5, 6],[7, 7, 7, 7, 7, 7]], 3))
+
   </script>
 </body>
 
