Unfinished Loop - Bug Fixing #1

--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -433,8 +433,18 @@ function mango(quantity, price){
   return result
 
 }
+function createArray(number){
+  var newArray = [];
   
-  console.log(mango(83, 16))
+  for(var counter = 1; counter <= number; i++){
+    return console.log(counter)
+    //newArray.push(counter);
+  }
+  
+  return newArray;
+}
+  
+  console.log(createArray(2))
   
 
 
