--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -16,443 +16,29 @@
   <p>yo yo yo</p>
   <script>
 
-const names = ["Hole-in-one!", "Eagle", "Birdie", "Par", "Bogey", "Double Bogey", "Go Home!"];
-
-function golfScore(par, strokes) {
-  // Only change code below this line
-  if(par === 4 && strokes === 1) {
-    return names[0]
-  } else if (par === 4 && strokes === 2) {
-    return names[1]
-  } else if (par === 5 && strokes === 2) {
-    return names[1]
-  } else if (par === 4 && strokes === 3) {
-    return names[2]
-  } else if (par === 4 && strokes === 4) {
-    return names[3]
-  } else if (par === 1 && strokes === 1) {
-    return names[0]
-  } else if (par === 5 && strokes === 5) {
-    return names[3]
-  } else if (par === 4 && strokes === 5) {
-    return names[4]
-  } else if (par === 4 && strokes === 6) {
-    return names[5]
-  } else if (par === 4 && strokes === 7) {
-    return names[6]
-  } else if (par === 5 && strokes === 9) {
-    return names[6]
-  }
-
-  return "Change Me";
-
-  // Only change code above this line
-}
-
-function caseInSwitch(val) {
-  let answer = "";
-  // Only change code below this line
-  switch (val) {
-    case 1:
-      answer ='alpha';
-      break;
-    case 2:
-      answer = 'beta';
-      break;
-    case 3:
-      answer = 'gamma';
-      break;
-    case 4:
-      answer ='delta';
-      break;
-  }
-
-
-  // Only change code above this line
-  return answer;
-}
-function switchOfStuff(val) {
-  let answer = "";
-  // Only change code below this line
-  switch(val) {
-    case 'a':
-      answer = 'apple';
-      break;
-    case 'b':
-      answer = 'bird';
-      break;
-    case 'c':
-      answer = 'cat';
-      break;
-    default:
-      answer = 'stuff';
-  }
-
-
-  // Only change code above this line
-  return answer;
-}
-const myDog = {
-  // Only change code below this line
-  name: 'gaf',
-  legs: 4,
-  tails: 2,
-  friends: [3]
-
-  // Only change code above this line
-};
-// Setup
-// Setup
-// Setup
-const testObj = {
-  12: "Namath",
-  16: "Montana",
-  19: "Unitas"
-};
-// Setup
-const myDogs = {
-  "name": "Coder",
-  "legs": 4,
-  "tails": 1,
-  "friends": ["freeCodeCamp Campers"]
-};
-
-// Only change code below this line
-myDog.name = "Happy Coder";
-// Only change code below this line
-const playerNumber = 16;  // Change this line
-const player = testObj[playerNumber];   // Change this line
-// Only change code below this line
-const entreeValue = testObj["an entree"];   // Change this line
-const drinkValue = testObj["the drink"];    // Change this line
-
-// Only change code below this line
-const hatValue = testObj.hat;      // Change this line
-const shirtValue = testObj.shirt;    // Change this line
-// Setup
-const recordCollection = {
-  2548: {
-    albumTitle: 'Slippery When Wet',
-    artist: 'Bon Jovi',
-    tracks: ['Let It Rock', 'You Give Love a Bad Name']
-  },
-  2468: {
-    albumTitle: '1999',
-    artist: 'Prince',
-    tracks: ['1999', 'Little Red Corvette']
-  },
-  1245: {
-    artist: 'Robert Palmer',
-    tracks: []
-  },
-  5439: {
-    albumTitle: 'ABBA Gold'
-  }
-};
-
-// Only change code below this line
-
-function updateRecords(records, id, prop, value) {
-  if (prop !== 'tracks' && value !== "") {
-    records[id][prop] = value;
-  } else if (prop === "tracks" && records[id].hasOwnProperty("tracks") === false) {
-    records[id][prop] = [value];
-  } else if (prop === "tracks" && value !== "") {
-    records[id][prop].push(value);
-  } else if (value === "") {
-    delete records[id][prop];
-  }
-  return records;
-}
-// Setup
-
-const myArray = [];
-for (let i = 1; i <= 5; i++) {
-  myArray.push(i)
-}
-
-for (i=1; i<=10; i+=2) {
-  myArray.push(i)
-}
-for (let i=9; i>0; i-=2) {
-  myArray.push(i)
-}
-// Setup
-const contacts = [
-  {
-    firstName: "Akira",
-    lastName: "Laine",
-    number: "0543236543",
-    likes: ["Pizza", "Coding", "Brownie Points"],
-  },
-  {
-    firstName: "Harry",
-    lastName: "Potter",
-    number: "0994372684",
-    likes: ["Hogwarts", "Magic", "Hagrid"],
-  },
-  {
-    firstName: "Sherlock",
-    lastName: "Holmes",
-    number: "0487345643",
-    likes: ["Intriguing Cases", "Violin"],
-  },
-  {
-    firstName: "Kristian",
-    lastName: "Vos",
-    number: "unknown",
-    likes: ["JavaScript", "Gaming", "Foxes"],
-  },
-];
-
-function lookUpProfile(name, prop) {
-  // Only change code below this line
-  for (let i = 0; i<contacts.length; i++) {
-    if (contacts[i].firstName === name && contacts[i][prop]) {
-      return contacts[i][prop];
-    } else if (contacts[i].firstName === name && !contacts[i]   [prop]) {
-      return 'No such property'
-    } 
-  }
-  return 'No such contact';
-  // Only change code above this line
-}
-
-lookUpProfile("Akira", "likes");
-
-function randomFraction() {
-
-// Only change code below this line
-
-return Math.random();
-
-// Only change code above this line
-}
-function randomWholeNum() {
-
-// Only change code below this line
-
-return Math.floor(Math.random() * 10);
-}
-function randomRange(myMin, myMax) {
-  // Only change code below this line
-  return Math.floor(Math.random() * (myMax - myMin + 1)+myMin);
-  // Only change code above this line
-}
-function convertToInteger(str) {
-  return parseInt(str)
-}
-
-convertToInteger("56");
-
-function barTriang(p1, p2, p3){
-  let x = ((p1[0] + p2[0] + p3[0]) / 3) ;
-  let y = ((p1[1] + p2[1] + p3[1]) / 3) ;
-  x = x.toFixed(4) ;
-  y = y.toFixed(4) ;
-  let arr = [Number(x), Number(y)]
-  console.log(arr)
-  //your code here
-}
-function friend(friends){
-  let myFriends = [];
-  for (let i = 0; i<friends.length; i++) {
-    if (friends[i].length <= 4 && !/[^a-zA-Z]/.test(friends[i])) {
-      myFriends.push(friends[i])
+    let a = {
+      name: 'asda',
+      protocol: 'http',
+      isOnline: true,
+      country: {
+         city: 'RZN'
+      },
+      classroom : {
+        teacher: {
+          name: 'alex',
+          age: 18
+        }
+      }
     }
-  }
-  return( myFriends)
-  //your code here
-}
-function getSum( a,b ) {
-  let sum = 0;
-  if (a < b) {
-    for (let i = a; i <= b; i++ ) {
-      sum += i
+    let b = {
+      ...a
     }
-    return sum
-  } else  {
-    for (let i = a; i >= b; i-- ) {
-      sum += i
-    }
-    return sum
-  }
- 
-}
-const stringToNumber = function(str){
-  
-  // put your code here
-  return  +str;
-}
-function isPythagoreanTriple(integers) {
-  if ( integers[0] * integers[0] + integers[1]*integers[1] === integers[2] * integers[2] 
-      || integers[1] * integers[1] + integers[2]*integers[2] === integers[0] * integers[0] 
-      || integers[0] * integers[0] + integers[2]*integers[2] === integers[2] * integers[1]) {
-    return true
-  }
-  return false
-  // Good luck friends!
-}
-function disemvowel(str) {
-  return str.replace(/[aeiou]/gi, '');
-}
-function solution(str, ending){
-  
-  let maxStr = ending.length - 1;
-  if (ending ==='' || str.slice(-ending.length) === ending) {
-    return true;
-  } return false;
-  TODO: complete
-  // return str.slice(-3)
-}
-const binaryArrayToNumber = arr => {
-  let str = '';
-  for (let i=0; i< arr.length; i++) {
-    str += arr[i]
-  }
-  str = +str;
-  return parseInt(str, 2 )
-  // your code
-};
-function abbrevName(name){
-  let arr = name.split(' ')
-  let newName = `${arr[0][0]}.${arr[1][0]}`
-  return newName.toUpperCase()
-    // code away
+    b.name = 'Eueeue'
+    b.country = {...a.country}
+    b.country.city = 'MSK'
 
-}
-function century(year) {
-  // Finish this :)
-  let arr = String(year).split('');
-  let endNum = arr.slice(-2).join('')
-  let result = '';
-  for (let i = 0; i < arr.length - 2; i ++) {
-      result += arr[i]
-    }
-
-  if( arr.length <= 2) {
-    return result = 1
-  } else if (+endNum === 0) {
-    return +result
-  } return result = +result + 1;
-}
-function highAndLow(numbers){
-  let arr = numbers.split(' ');
-  let result = `${Math.max(...arr)} ${Math.min(...arr)}`
-  return result;
-  // ...
-}
-function areYouPlayingBanjo(name) {
-  if (name[0].toUpperCase() === 'R') {
-    return `${name} plays banjo`;
-  }
-  return `${name} does not play banjo`
-}
-function removeChar(str){
- //You got this!
-  return str.slice(1,  - 1)
-};
-
-
-function countBy(x, n) {
-  let z = [];
-  for(let i = 0; i < n; i++) {
-    z.push(i + x)
-  }
-   z = z[0] === 1 ? z : z.map((e,i) => e = e === x ? x : x * (i+1) )
-  return z;
-}
-function countPositivesSumNegatives(input) {
-  let arr = [0,0]
-  if(input=== null || input.length === 0) {
-    arr = []
-  } else {
-    for(let i = 0; i < input.length; i++) {
-    if (input[i] > 0) {
-      arr[0] += 1
-    } else {
-      arr[1] += input[i]
-    }
-  }
-  }
-return arr
-  // your code here
-}
-function litres(time) {
-  let litre = 0.5
-
-  return Math.floor(time * litre);
-}
-function past(h, m, s){
-  //#Happy Coding! ^_^
-  let now = new Date(0,0,0)
-  let time = new Date(
-    now.getFullYear(),
-        now.getMonth(),
-        now.getDate(),
-        h,m,s)
-  
-  return  time - now
-}
-function addingShifted (arrayOfArrays, shift) {
-  let newArr = arrayOfArrays[0]
-  
-  for ( let i = 0; i < shift * (arrayOfArrays.length-1); i++) {
-    newArr.push(0)
-  }
-  console.log( newArr)
-  for (let i = 1; i < arrayOfArrays.length; i++) {
-    for ( let j = 0; j < arrayOfArrays[i].length; j++) {
-      newArr[shift * i + j] += arrayOfArrays[i][j]
-      console.log(arrayOfArrays[i][j])
-    }
-  }
-
-    return newArr
-  }
-
-  let fruits = ['banana', 'apple'];
-  fruits.unshift('passion')
-  let arr = Array(200)
-
-  function betterThanAverage(classPoints, yourPoints) {
-    let resultPoints = classPoints.reduce((a,b) => a + b, 0);
-    let middlePoints = resultPoints / classPoints.length
-    return yourPoints >= middlePoints ? true : false
-  // Your code here
-}
-function mango(quantity, price){
-  let superfluousPrice = 0
-  const oneBlockPrice = price * 2;
-  const blocks = Math.floor(quantity / 3)
-  superfluousPrice = (quantity - blocks * 3) * price
-
-  const result = quantity <=2 
-    ? quantity * price 
-    : blocks * oneBlockPrice + superfluousPrice
-  return result
-
-}
-function createArray(number){
-  var newArray = [];
-  
-  for(var counter = 1; counter <= number; counter++){
-    return console.log(counter)
-    //newArray.push(counter);
-  }
-  
-  return newArray;
-}
-function boolToWord( bool ){
-  return  bool ? "Yes" : "No"
-  //...
-}
-function solution(str){
-  let result = [...str].reverse().join('')
-  return result
-}
-
-  console.log(solution('world'))
+  console.log(a)
+  console.log(b)
   
 
 
