--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -37,7 +37,10 @@
       
       return result.reduce((accum, currentValue) => accum + currentValue,0)  // your code here
 }
-    console.log(sumOfMinimums([[7, 9, 8, 6, 2], [6, 3, 5, 4, 3], [5, 8, 7, 4, 5]]));
+function setAlarm(employed, vacation){
+  return employed & !vacation ? true : false
+
+}
 
 
   </script>
