--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -41,6 +41,9 @@ function setAlarm(employed, vacation){
   return employed & !vacation ? true : false
 
 }
+function repeatStr (n, s) {
+  return s.repeat(n);
+}
 
 
   </script>
