--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -39,10 +39,19 @@
 }
 function setAlarm(employed, vacation){
   return employed & !vacation ? true : false
-
 }
 function repeatStr (n, s) {
   return s.repeat(n);
+}
+function noIfsNoButs(a, b) {
+
+  function noIfsNoButs(a, b) {
+
+   return a > b && `${a} is greater than ${b}` 
+   || a < b &&  `${a} is smaller than ${b}` 
+   || a === b &&  `${a} is equal to ${b}`
+
+} 
 }
 
 
