Keep up the hoop

--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -14,12 +14,12 @@
     Hello
   </h2>
   <p>yo yo yo</p>
-  
+
   <script>
 
-function booleanToString(b){
-  //your code here
-  return b.toString()
+function hoopCount (n) {
+   //your code goes here   
+  return n >= 10 ? 'Great, now move on to tricks' : 'Keep at it until you get it'
 }
 
 console.log(remove('Hi! Hi! !Hi!'));
@@ -27,3 +27,4 @@ console.log(remove('Hi! Hi! !Hi!'));
 </body>
 
 </html>
+
