--- a/First doc/Hello.html
+++ b/First doc/Hello.html
@@ -32,6 +32,28 @@ function sumMul(n,m){
   }
 //your idea here
 }
+function reverseList(list) {
+ return list.reverse()
+}
+function smash (words) {
+   return words.join(' ')
+};
+const rps = (p1, p2) => {
+  if (p1 === p2) return "Draw!"
+  if (p1 === "scissors" && p2 === "paper") {
+    return "Player 1 won!"
+  } else if (p1 === "scissors" && p2 === "rock") {
+    return "Player 2 won!"
+  } else if (p1 === 'paper' && p2 === "rock") {
+    return "Player 1 won!"
+  } else if (p1 === 'paper' && p2 === "scissors") {
+    return "Player 2 won!"
+  } else if (p1 === 'rock' && p2 === "scissors") {
+    return "Player 1 won!"
+  } else {
+    return "Player 2 won!"
+  }
+};
 
 console.log(sumMul(3, 13));
   </script>
